<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="app_name" translatable="false">Frankfurt am Main</string>
    <string name="owm_city_id" translatable="false">2925533</string>

    <!--    OWM_USER_ID la fiecare 100 de aplicatii - in data/NetworkUtils
            SHA1: 64:5D:DB:FB:F5:EB:C5...

            Upload certificates
            AndreiDan SHA1: 00:3D:81:B7:54:3A:11:28:EC:FB:F7:E1:76:10:CC:7A:1E:2F:51:CD
            upload_key_2 SHA1: 64:5D:DB:FB:F5:EB:C5:C6:7D:5C:4B:2C:CA:40:FE:BD:1C:A9:6F:C1
            Andrei
            -->

    <string name="admob_app_id" translatable="false">ca-app-pub-3931793949981809~4399021976</string>
    <string name="admob_banner_id" translatable="false">ca-app-pub-3931793949981809/5875755177</string>
    <string name="admob_med_rectangle_id" translatable="false">ca-app-pub-3931793949981809/6849629940</string>

    <!--
      <string name="admob_app_id" translatable="false">ca-app-pub-3931793949981809~3204791182</string>
        <string name="admob_banner_id">ca-app-pub-3931793949981809/2046448726</string>
        <string name="admob_med_rectangle_id">ca-app-pub-3931793949981809/9026790042</string>
            Sunshine UK 5small cities u 170k
    -->

    <string name="owm_api_key" translatable="false">6efe9ba5f984adebdeb54334751f6c0b</string> <!-- alboteanui - creat Dec 2019-->
    <string name="GOOGLE_API_KEY" translatable="false">AIzaSyB3W6TqecOLdHp8lcW4X9SCEmyYDr9BgZ0</string>    <!--Sunshine 2019 - anca.scobaru@gmail.com-->
    <string name="BASE_STATIC_MAP_URL" translatable="false">https://maps.googleapis.com/maps/api/staticmap?</string>
    <string name="link_privacy_policy" translatable="false">https://sites.google.com/view/privacy-policy-for-app-weather/main</string>

    <string name="pref_last_notification" translatable="false">last_notification</string>
    <string name="pref_enable_notifications_key" translatable="false">notification_daily</string>
    <string name="notification_title_text" translatable="false">%s in %s</string>
    <string name="pref_units_key" translatable="false">units_system</string>
    <string name="button_feedback" translatable="false">feedback_button_id</string>
    <string name="notification_content_text" translatable="false">%s %s</string>
    <string name="norif_channel_id" translatable="false">norif_chanel_sun</string>
    <string name="notif_channel_name" translatable="false">Norification channel</string>
    <string name="format_temperature" translatable="false">
        <xliff:g id="temp">%1.0f</xliff:g>\u00B0
    </string>
    <string name="format_humidity" translatable="false">
        <xliff:g id="humidity">%1.0f</xliff:g> %%
    </string>
    <string name="format_wind_kmh">
        <xliff:g id="speed">%1$1.0f</xliff:g> km/h
        <xliff:g id="direction">%2$s</xliff:g>
    </string>
    <string name="format_wind_mph">
        <xliff:g id="speed">%1$1.0f</xliff:g> mph
        <xliff:g id="direction">%2$s</xliff:g>
    </string>
    <string name="format_pressure">
        <xliff:g id="pressure">%1.0f</xliff:g> hPa
    </string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="map_content_description">map city</string>
    <string name="wind_label">Wind</string>
    <string name="pressure_label">Pressure</string>
    <string name="humidity_label">Humidity</string>
    <string name="pref_enable_notifications_label">Weather Notifications</string>

    <string name="a11y_forecast">Forecast: <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="a11y_forecast_icon">Forecast icon: <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="a11y_high_temp">High: <xliff:g id="high">%1$s</xliff:g></string>
    <string name="a11y_humidity">Humidity: <xliff:g id="humidity">%1$s</xliff:g></string>
    <string name="a11y_pressure">Barometric Pressure: <xliff:g id="pressure">%1$s</xliff:g></string>
    <string name="a11y_wind">Wind speed and direction: <xliff:g id="wind">%1$s</xliff:g></string>
    <string name="a11y_news_icon_content">icon news</string>
    <string name="a11y_news_arrow">arrow navigate to news</string>

    <string name="N">N</string>
    <string name="S">S</string>
    <string name="E">O</string>
    <string name="W">W</string>

    <string name="NE">NE</string>
    <string name="NW">NW</string>
    <string name="SE">SE</string>
    <string name="SW">SW</string>


    <string name="labelOurAd">Advertising</string>
    <string name="menu_label_privacy_policy">Privacy Policy</string>

    <string name="feedback_review_sent">Thank you</string>
    <string name="feedback_review_sent_unsuccesfully">Error sending the review</string>
    <string name="sent_feedback_label">sent</string>
    <string name="feedback_pref_summary">Report technical issues or suggest new features</string>
    <string name="feedback_pref_title">Send feedback</string>
    <string name="title_activity_news">News</string>

    <string name="label_news_text">Latest news</string>

    <!-- Weather Conditions (From OpenWeatherMap) -->
    <string name="condition_2xx">Storm</string>
    <string name="condition_3xx">Drizzle</string>
    <string name="condition_500">Light Rain</string>
    <string name="condition_501">Moderate Rain</string>
    <string name="condition_502">Heavy Rain</string>
    <string name="condition_503">Intense Rain</string>
    <string name="condition_504">Extreme Rain</string>
    <string name="condition_511">Freezing Rain</string>
    <string name="condition_520">Light Shower</string>
    <string name="condition_521">Shower</string>
    <string name="condition_522">Heavy Shower</string>
    <string name="condition_531">Ragged Shower</string>
    <string name="condition_600">Light Snow</string>
    <string name="condition_601">Snow</string>
    <string name="condition_602">Heavy Snow</string>
    <string name="condition_611">Sleet</string>
    <string name="condition_612">Light shower Sleet</string>
    <string name="condition_613">Shower Sleet</string>
    <string name="condition_615">Rain and Snow</string>
    <string name="condition_616">Rain and Snow</string>
    <string name="condition_620">Shower Snow</string>
    <string name="condition_621">Shower Snow</string>
    <string name="condition_622">Shower Snow</string>
    <string name="condition_701">Mist</string>
    <string name="condition_711">Smoke</string>
    <string name="condition_721">Haze</string>
    <string name="condition_731">Sand, Dust</string>
    <string name="condition_741">Fog</string>
    <string name="condition_751">Sand</string>
    <string name="condition_761">Dust</string>
    <string name="condition_762">Volcanic Ash</string>
    <string name="condition_771">Squalls</string>
    <string name="condition_781">Tornado</string>
    <string name="condition_800">Clear</string>
    <string name="condition_801">Mostly Clear</string>
    <string name="condition_802">Scattered Clouds</string>
    <string name="condition_803">Broken Clouds</string>
    <string name="condition_804">Overcast Clouds</string>
    <string name="condition_900">Tornado</string>
    <string name="condition_901">Tropical Storm</string>
    <string name="condition_902">Hurricane</string>
    <string name="condition_903">Cold</string>
    <string name="condition_904">Hot</string>
    <string name="condition_905">Windy</string>
    <string name="condition_906">Hail</string>
    <string name="condition_951">Calm</string>
    <string name="condition_952">Light Breeze</string>
    <string name="condition_953">Gentle Breeze</string>
    <string name="condition_954">Breeze</string>
    <string name="condition_955">Fresh Breeze</string>
    <string name="condition_956">Strong Breeze</string>
    <string name="condition_957">High Wind</string>
    <string name="condition_958">Gale</string>
    <string name="condition_959">Severe Gale</string>
    <string name="condition_960">Storm</string>
    <string name="condition_961">Violent Storm</string>
    <string name="condition_962">Hurricane</string>

    <string name="condition_unknown">Unknown (<xliff:g id="conditionId">%1$d</xliff:g>)</string>
    <string name="title_graph_temperature">Temperature by hour</string>


</resources>