<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        app:key="@string/pref_enable_notifications_key"
        app:title="@string/pref_enable_notifications_label" />

    <EditTextPreference
        app:key="@string/key_pref_feedback"
        app:summary="@string/feedback_pref_summary"
        app:title="@string/feedback_pref_title" />

    <!--
        <ListPreference
            app:key="example_list"
            app:title="@string/pref_title_add_friends_to_messages"
            app:defaultValue="-1"
            app:entries="@array/pref_example_list_titles"
            app:entryValues="@array/pref_example_list_values"
            app:negativeButtonText="@null"
            app:positiveButtonText="@null"/>
    -->


</androidx.preference.PreferenceScreen>