<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardNews"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    card_view:cardBackgroundColor="@color/blackSemi"

    card_view:cardElevation="2sp"
    card_view:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/selector_transp">

        <ImageView
            android:id="@+id/imageViewNews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_news"
            android:contentDescription="@string/a11y_news_icon_content"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp"
            card_view:layout_constraintEnd_toStartOf="@+id/textViewNews"/>

        <TextView
            android:id="@+id/textViewNews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_news_text"
            android:textSize="18sp"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="32dp"
            android:textColor="@android:color/white"/>

        <ImageView
            android:id="@+id/imageViewArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_forward"
            android:contentDescription="@string/a11y_news_arrow"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="8dp"
            card_view:layout_constraintStart_toEndOf="@+id/textViewNews"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>

