<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardDetailsWeather"
    card_view:cardBackgroundColor="@color/blackSemi"
    card_view:cardElevation="2sp"
    card_view:cardUseCompatPadding="true"
>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/extra_details_"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/forecast_detail_vertical_padding"
            android:paddingEnd="@dimen/forecast_detail_horizontal_padding"
            android:paddingStart="@dimen/forecast_detail_horizontal_padding"
            android:paddingTop="@dimen/forecast_detail_vertical_padding">

            <!-- This guideline divides the layout into a left and right half and is used for alignment -->
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/horizontal_middle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5"/>

            <!-- Humidity label -->
            <TextView
                android:id="@+id/humidity_label"
                style="@style/SubheadWhiteTextStyle"
                android:text="@string/humidity_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Humidity measurement -->
            <TextView
                android:id="@+id/humidity_measurement"
                style="@style/SubheadWhiteTextStyle"
                app:layout_constraintBottom_toBottomOf="@+id/humidity_label"
                app:layout_constraintStart_toStartOf="@+id/horizontal_middle2"
                tools:text="38%"/>

            <!-- Pressure label -->
            <TextView
                android:id="@+id/pressure_label"
                style="@style/SubheadWhiteTextStyle"
                android:layout_marginTop="8dp"
                android:text="@string/pressure_label"
                app:layout_constraintStart_toStartOf="@+id/humidity_label"
                app:layout_constraintTop_toBottomOf="@+id/humidity_label" />

            <!-- Pressure measurement -->
            <TextView
                android:id="@+id/pressure_details"
                style="@style/SubheadWhiteTextStyle"
                app:layout_constraintBottom_toBottomOf="@+id/pressure_label"
                app:layout_constraintStart_toStartOf="@+id/horizontal_middle2"
                tools:text="995 hPa"/>

            <!-- Wind label -->
            <TextView
                android:id="@+id/wind_label"
                style="@style/SubheadWhiteTextStyle"
                android:layout_marginTop="8dp"
                android:text="@string/wind_label"
                app:layout_constraintStart_toStartOf="@+id/pressure_label"
                app:layout_constraintTop_toBottomOf="@+id/pressure_label" />

            <!-- Wind measurement -->
            <TextView
                android:id="@+id/wind_measurement"
                style="@style/SubheadWhiteTextStyle"
                app:layout_constraintBottom_toBottomOf="@+id/wind_label"
                app:layout_constraintStart_toStartOf="@+id/horizontal_middle2"
                tools:text="4km/h NW"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

